@@ -10,6 +10,9 @@ August 12, 2015
  * Using #define'd bits for SDMCTL settings.
  * Fixed likely bug in original game's high score tracking
    (affecting scores over 10,000 points).
+ * Using #define'd pointer to OS ROM font (during "UH OH" sequence)
+ * Erase pieces right after throwing them, so they don't stay
+   next to your character while the cascade effect takes place.
 
 July 18, 2015
  * Requiring cc65_atari8bit_extended_headers as an
